# src/app/api/models.ts
@@ -2,3 +2,5 @@ export { QuoteDto } from './models/quote-dto';
 export { CreateQuoteRequest } from './models/create-quote-request';
 export { CreateQuoteResponse } from './models/create-quote-response';
 export { GetQuoteResponse } from './models/get-quote-response';
+export { EditQuoteAndSaveRequest } from './models/edit-quote-and-save-request';
+export { EditQuoteAndSaveResponse } from './models/edit-quote-and-save-response';
