# src/app/api/models/edit-quote-and-save-request.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+import { QuoteDto } from './quote-dto';
+export interface EditQuoteAndSaveRequest {
+  quote?: QuoteDto;
+}
