# src/app/api/models/edit-quote-and-save-response.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+export interface EditQuoteAndSaveResponse {
+  errorMessage?: null | string;
+  isSuccess?: boolean;
+}
