# src/app/api/models/quote-dto.ts
@@ -2,10 +2,13 @@
 export interface QuoteDto {
   amount?: number;
   email?: null | string;
+  establishmentFee?: number;
   firstName?: null | string;
   id?: string;
   lastName?: null | string;
   mobile?: null | string;
+  repayments?: number;
   term?: number;
   title?: null | string;
+  totalInterest?: number;
 }
